--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <!-- Mobile-Specific Stylesheet -->
     <link rel="stylesheet" href="style_mobile.css">
+
+    <!-- WhatsApp Mobile Styles -->
+    <link rel="stylesheet" href="whatsapp_mobile.css">
 </head>
 
 <body>
@@ -79,6 +82,10 @@
                         <a href="#contact" class="btn btn-secondary">
                             <i class="fas fa-envelope"></i>
                             تواصل معي
+                        </a>
+                        <a href="Bashar_Awfan_CV.pdf" download class="btn btn-outline">
+                            <i class="fas fa-download"></i>
+                            تحميل السيرة الذاتية
                         </a>
                     </div>
                 </div>
@@ -346,8 +353,7 @@
 
                 <div class="project-card fade-in-up">
                     <div class="project-image">
-                        <img src="imags/تصميم-واجهات-التطبيقات.png"
-                            alt="نظام نقاط البيع">
+                        <img src="imags/تصميم-واجهات-التطبيقات.png" alt="نظام نقاط البيع">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="View demo">
@@ -393,7 +399,10 @@
                         <p class="project-description">
                             <!-- منصة APIs قابلة للتوسع مع توثيق شامل، نظام مصادقة JWT،
                             وإدارة الصلاحيات المتقدمة. -->
-                            نظام محاسبي متكامل لادارة العمليات الحسابية والمالية في المحلات التجارية والصيدليات والمكتبات وغيرها... صمم النظام بشكل خاص للمؤسسات الصغيرة والمتوسطة مستبعد التعقيدات والصعوبات المتواجدة في الانظمة التقليدية ،يتعامل مع مختلف الاقسام مثل "المبيعات ، المشتريات ، المخازن ، التقارير المالية والجرد السنوي والشهري واليومي"
+                            نظام محاسبي متكامل لادارة العمليات الحسابية والمالية في المحلات التجارية والصيدليات
+                            والمكتبات وغيرها... صمم النظام بشكل خاص للمؤسسات الصغيرة والمتوسطة مستبعد التعقيدات
+                            والصعوبات المتواجدة في الانظمة التقليدية ،يتعامل مع مختلف الاقسام مثل "المبيعات ، المشتريات
+                            ، المخازن ، التقارير المالية والجرد السنوي والشهري واليومي"
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">.NET 8</span>
@@ -472,8 +481,7 @@
 
                 <div class="project-card fade-in-up">
                     <div class="project-image">
-                        <img src="imags/ui-ux2.jpg"
-                            alt="لوحة تحليلات">
+                        <img src="imags/ui-ux2.jpg" alt="لوحة تحليلات">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="View demo">
@@ -955,6 +963,12 @@
             </div>
         </div>
     </footer>
+
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/967771666217?text=مرحباً، أود التواصل معك بخصوص مشروع" target="_blank"
+        rel="noopener noreferrer" class="whatsapp-float" aria-label="Contact via WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
     <!-- Scroll to Top Button -->
     <button id="scrollTopBtn" class="scroll-top-btn" aria-label="Scroll to top">
